# recycled-neutrino-ddt-plugins

./: .gitignore  Makefile.am  README.md  acinclude.m4  acinclude.m4.org  configure.ac
fx2/: Makefile.am
fx2/bouquet/: somain.c
fx2/lemm/: .gitignore  Makefile.am  colors.h  double.c  lemm.c  lemmings.cfg  pic.c  somain.c  sound.c  sprite.c  sprite.h
fx2/lib/: draw.c  draw.h  math.c  pig.c  pig.h  rcinput.c  rcinput.h
fx2/master/: Makefile.am  board.c  colors.h  master.cfg  somain.c
fx2/mines/: Makefile.am  somain.c
fx2/pac/: .gitignore  Makefile.am  colors.h  maze.c  pacman.cfg  somain.c
fx2/snake/: .gitignore  Makefile.am  colors.h  snake.c  snake.cfg  somain.c
fx2/sokoban/: .gitignore  Makefile.am  board.c  colors.h  somain.c
fx2/sol/: .gitignore  Makefile.am  colors.h  pics.h  sol.cfg  solboard.c  somain.c
fx2/solitair/: .gitignore  Card.cpp  Makefile.am  Table.cpp  pnm_file.h  somain.cpp
fx2/sudoku/: .gitignore  Makefile.am  board.cpp  board.h  colors.h  menu.cpp  menu.h  misc.cpp  somain.cpp  sudoku.cfg  sudoku.cpp  sudoku.h
fx2/tank/: .gitignore  Makefile.am  board.c  colors.h  somain.c  tank.cfg
fx2/tetris/: .gitignore  Makefile.am  board.c  colors.h  somain.c  tetris.cfg
fx2/vierg/: .gitignore  Makefile.am  board.c  colors.h  somain.c  vierg.cfg
fx2/yahtzee/: .gitignore  Makefile.am  yahtzee.c
getrc/: io.c  io.h
include/: plugin.h  rc_device.h  rc_device_hardcoded.h
input/: Makefile.am  gfx.c  gfx.h  icons.h  input.c  input.h  inputd.c  io.c  io.h  text.c  text.h
msgbox/: Makefile.am  gfx.c  gfx.h  icons.h  io.c  io.h  msgbox.c  msgbox.h  text.c  txtform.c
pr-auto-timer/: Makefile.am  auto-record-cleaner  auto-record-cleaner.conf  pr-auto-timer  pr-auto-timer-menu.cfg  pr-auto-timer-menu.lua  pr-auto-timer.conf  pr-auto-timer.sh
shellexec/: Makefile.am  gfx.c  gfx.h  io.c  io.h  shellexec.c  shellexec.cfg  shellexec.conf  shellexec.h  text.c
stb-backup/: Makefile.am  imgbackup  imgbackup.cfg  imgbackup.sh
stb-startup/: stb-startup.cfg  stb-startup.lua
stb-startup-tuxbox/: stb-startup.lua
stb-startup-vu/: stb-startup.cfg  stb-startup.lua
tuxcal/: tuxcal.c  tuxcal.h
tuxcal/daemon/: tuxcald.h  tuxcald.init
tuxcom/: Makefile.am  tuxcom.c  tuxcom.h
tuxmail/daemon/: tuxmaild.init
tuxwetter/: Makefile.am  convert.list  fb_display.c  gfx.c  gfx.h  gifdecomp.c  http.c  icons.h  io.c  io.h  php.c  text.c  tuxwetter.c  tuxwetter.conf  tuxwetter.h
