AC_INIT([tuxbox-plugins], [0.0.1])
AM_INIT_AUTOMAKE
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
AC_CONFIG_MACRO_DIR([m4])
AC_GNU_SOURCE

TUXBOX_APPS
TUXBOX_APPS_DIRECTORY
TUXBOX_BOXTYPE

AC_PROG_CC
AC_PROG_CXX
PKG_PROG_PKG_CONFIG
## both disabled => libtool still defaults to static
##                  at least the libtool I tested with ;-)
## --enable-shared => build only shared
## --enable-shared --enable-static => build both
AC_DISABLE_STATIC
AC_SYS_LARGEFILE
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(CURL,libcurl)
PKG_CHECK_MODULES(FREETYPE,freetype2)
PKG_CHECK_MODULES(PNG,libpng)

AC_OUTPUT([
Makefile
include/Makefile
tuxwetter/Makefile
input/Makefile
getrc/Makefile
shellexec/Makefile
stb-backup/Makefile
stb-startup/Makefile
stb-startup-tuxbox/Makefile
stb-startup-vu/Makefile
fx2/Makefile
fx2/lemm/Makefile
fx2/master/Makefile
fx2/pac/Makefile
fx2/tank/Makefile
fx2/yahtzee/Makefile
fx2/lib/Makefile
fx2/mines/Makefile
fx2/outdoor/Makefile
fx2/snake/Makefile
fx2/sokoban/Makefile
fx2/tetris/Makefile
fx2/vierg/Makefile
fx2/sol/Makefile
fx2/sudoku/Makefile
fx2/solitair/Makefile
])
#AC_OUTPUT([
#Makefile
#include/Makefile
#fx2/Makefile
#fx2/lemm/Makefile
#fx2/master/Makefile
#fx2/pac/Makefile
#fx2/tank/Makefile
#fx2/yahtzee/Makefile
#fx2/bouquet/Makefile
#fx2/lib/Makefile
#fx2/mines/Makefile
#fx2/outdoor/Makefile
#fx2/snake/Makefile
#fx2/sokoban/Makefile
#fx2/solitair/Makefile
#fx2/tetris/Makefile
#fx2/lcdcirc/Makefile
#fx2/satfind/Makefile
#fx2/vierg/Makefile
#fx2/sol/Makefile
#fx2/c64emu/Makefile
#fx2/sudoku/Makefile
#msgbox/Makefile
#tuxmail/Makefile
#tuxmail/daemon/Makefile
#tuxcal/Makefile
#tuxcal/daemon/Makefile
#tuxtxt/Makefile
#tuxtxt/font/Makefile
#tuxcom/Makefile
#tuxclock/Makefile
#tuxclock/daemon/Makefile
#vncviewer/Makefile
#vncviewer/rfb/Makefile
#logomask/Makefile
#logomask/shellexec/Makefile
#dvbsub/Makefile
#shellexec/Makefile
#tuxwetter/Makefile
#tuxwetter/bitmap/Makefile
#tuxwetter/shellexec/Makefile
#sysinfo/Makefile
#clock/Makefile
#clock/shellexec/Makefile
#blockads/Makefile
#blockads/shellexec/Makefile
#links/Makefile
#pip/Makefile
#mosaic/Makefile
#enigma/Makefile
#enigma/bitrate/Makefile
#enigma/demo/Makefile
#enigma/dreamdata/Makefile
#enigma/ngrabstart/Makefile
#enigma/ngrabstop/Makefile
#enigma/dslconnect/Makefile
#enigma/dsldisconnect/Makefile
#enigma/rss/Makefile
#enigma/script/Makefile
#enigma/getset/Makefile
#enigma/dbswitch/Makefile
#enigma/weather/Makefile
#enigma/weather/icons/Makefile
#enigma/dreamflash/Makefile
#enigma/movieplayer/Makefile
#enigma/scummvm/Makefile
#pluginx/Makefile
#tuxbox-plugins.pc
#])
