install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/auto-record-cleaner $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/auto-record-cleaner.conf $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/auto-record-cleaner.rules.example $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/auto-record-cleaner.rules.example $(DESTDIR)$(PLUGINDIR)/auto-record-cleaner.rules
	install -m 0644 $(srcdir)/pr-auto-timer $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer.conf $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer_hint.png $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer-menu.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer-menu.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer.rules.example $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/pr-auto-timer.rules.example $(DESTDIR)$(PLUGINDIR)/pr-auto-timer.rules
	install -m 0644 $(srcdir)/pr-auto-timer.sh $(DESTDIR)$(PLUGINDIR)
